# PocketOptionAPI

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.py  teste.py
docs/: README.md
examples/: __init__.py  simple_bot.py  trading_bot.py
pocketoptionapi/: __init__.py  api.py  constants.py  global_value.py  ssid_parser.py  stable_api.py
pocketoptionapi/ws/: client.py
pocketoptionapi/ws/channels/: base.py  buyv3.py  candles.py
pocketoptionapi/ws/objects/: base.py  candles.py  time_sync.py
tests/: README.md  __init__.py  conftest.py  test_constants.py  test_integration.py  test_pocketoption.py  test_ssid_parser.py
